--- a/src/Resources/ExceptionMessages.resx
+++ b/src/Resources/ExceptionMessages.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="BitsLargerThanType" xml:space="preserve">
+    <value>The size in bits is too large for the specified type.</value>
+  </data>
   <data name="DestPathNotValid" xml:space="preserve">
     <value>The destination path is invalid.</value>
   </data>
@@ -128,5 +131,8 @@
   </data>
   <data name="SizeTooSmall" xml:space="preserve">
     <value>Parameter size is too small.</value>
+  </data>
+  <data name="TypeInvalid" xml:space="preserve">
+    <value>The specified type invalid.</value>
   </data>
 </root>
